# mini

./: README.md  pyproject.toml
src/mini/: __init__.py  ansi_colors.py  menu.py  misc.py
