[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini"
version = "0.1.0"
description = "mini library for python cli apps"
readme = "README.md"
authors = [
    { name = "Masayoshi Kokuryo" }
]
requires-python = ">=3"
dependencies = ['toml']
[project.optional-dependencies]
lint = [
    "pylint",
]
